k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Exact
            backend:
              service:
                name: web-app
                port:
                  number: 80

          - path: /documentation
            pathType: Exact
            backend:
              service:
                name: docs-app
                port:
                  number: 80

          - path: /admin
            pathType: Exact
            backend:
              service:
                name: cms-app
                port:
                  number: 80
